--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "yiisoft/yii2-imagine": "^2.1",
         "la-haute-societe/yii2-save-relations-behavior": "*",
         "unclead/yii2-multiple-input": "~2.0",
-        "yii2mod/yii2-comments": "*"
+        "yii2mod/yii2-comments": "*",
+        "2amigos/yii2-date-time-picker-widget": "~1.0",
+        "nkovacs/yii2-datetimepicker": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
